<resources>
    <string name="app_name">IMC</string>
    <string name="imc_title_label">Calculadora IMC</string>
    <string name="weight_label">Peso (kg)</string>
    <string name="height_label">Altura (m)</string>
    <string name="weight_hint_label">65</string>
    <string name="height_hint_label">1.75</string>
    <string name="button_calculate">Calcular</string>
    <string name="index_label">Seu indice é: 30</string>
    <string name="ideal_weight">Peso Ideal</string>

    <string name="magreza">Abaixo do peso</string>
    <string name="peso_normal">Peso normal</string>
    <string name="sobre_peso">Você está sobrepeso</string>
    <string name="obesidade_grau_i">Você está com Obesidade Grau I</string>
    <string name="obesidade_grau_ii">Você está com Obesidade Grau II</string>
    <string name="obesidade_grau_iii">Você está com Obesidade Grau III</string>

    <string name="imc_result">Seu IMC é: %1$s</string>
</resources>