<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/containerSuperior"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:background="@color/backgroundTopColor"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/imc_title_label"
            android:textAlignment="center"
            android:textColor="#FFF"
            android:textSize="32sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/containerForm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/label_form"
                    android:text="@string/weight_label" />

                <TextView
                    style="@style/label_form"
                    android:text="@string/height_label" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp">

                <EditText
                    android:id="@+id/etPeso"
                    style="@style/input_form"
                    android:layout_marginEnd="8dp"
                    android:hint="@string/weight_hint_label"
                    android:inputType="numberDecimal"
                    android:maxLength="4" />

                <EditText
                    android:id="@+id/etAltura"
                    style="@style/input_form"
                    android:layout_marginStart="8dp"
                    android:hint="@string/height_hint_label"
                    android:inputType="numberDecimal"
                    android:maxLength="5" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btCalcular"
                style="@style/button"
                android:text="@string/button_calculate" />

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/containerInferior"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:background="@color/backgroundBottomColor"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvIMC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="22sp"
            android:textStyle="bold"
            tools:text="Seu indice é: 30" />

        <ImageView
            android:id="@+id/ivIMCStatus"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/tvIMCStatus"
            android:layout_below="@+id/tvIMC"
            android:src="@drawable/masc_ideal"
            android:visibility="gone"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tvIMCStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="22sp"
            android:textStyle="bold"
            tools:text="Peso ideal" />

    </RelativeLayout>

</LinearLayout>